@startuml

title __HTTP's Class Diagram__\n

  namespace in.ashwanik.pdp.common.http {
    class in.ashwanik.pdp.common.http.RequestParam {
        - url : String
        + getUrl()
        {static} + paramsBuilder()
        - RequestParam()
        - getUrlWithQueryParams()
    }
  }
  

  namespace in.ashwanik.pdp.common.http {
    class in.ashwanik.pdp.common.http.RequestParam.RequestParamsBuilder {
        - headers : Map<String, String>
        - queryParams : Map<String, String>
        - timeout : Integer
        - url : String
        + build()
        + headers()
        + queryParams()
        + timeout()
        + url()
        ~ RequestParamsBuilder()
    }
  }
  

  namespace in.ashwanik.pdp.common.http {
    class in.ashwanik.pdp.common.http.RestClient {
        {static} - JSON : MediaType
        - httpClient : OkHttpClient
        {static} - log : Logger
        {static} + builder()
        + get()
        + post()
        ~ RestClient()
        - addHeaders()
        - getResponse()
        - handleResponse()
    }
  }
  

  namespace in.ashwanik.pdp.common.http {
    class in.ashwanik.pdp.common.http.RestClient.RestClientBuilder {
        - httpClient : OkHttpClient
        + build()
        + httpClient()
        + toString()
        ~ RestClientBuilder()
    }
  }
  

  namespace in.ashwanik.pdp.common.http {
    class in.ashwanik.pdp.common.http.RestClientParam {
        - headers : Map<String, String>
        - queryParams : Map<String, String>
        - timeout : Integer
        + RestClientParam()
        {static} + builder()
        + getHeaders()
        + getQueryParams()
        + getTimeout()
    }
  }
  

  namespace in.ashwanik.pdp.common.http {
    class in.ashwanik.pdp.common.http.RestClientParam.RestClientParamBuilder {
        - headers : Map<String, String>
        - queryParams : Map<String, String>
        - timeout : Integer
        + build()
        + headers()
        + queryParams()
        + timeout()
        + toString()
        ~ RestClientParamBuilder()
    }
  }
  

  namespace in.ashwanik.pdp.common.http {
    class in.ashwanik.pdp.common.http.RestResponse {
        {static} + builder()
        + getError()
        + getSuccess()
        + isSuccess()
        ~ RestResponse()
    }
  }
  

  namespace in.ashwanik.pdp.common.http {
    class in.ashwanik.pdp.common.http.RestResponse.RestResponseBuilder {
        + build()
        + error()
        + success()
        + toString()
        ~ RestResponseBuilder()
    }
  }
  

  in.ashwanik.pdp.common.http.RequestParam -up-|> in.ashwanik.pdp.common.http.RestClientParam
  in.ashwanik.pdp.common.http.RequestParam +-down- in.ashwanik.pdp.common.http.RequestParam.RequestParamsBuilder
  in.ashwanik.pdp.common.http.RestClient +-down- in.ashwanik.pdp.common.http.RestClient.RestClientBuilder
  in.ashwanik.pdp.common.http.RestClientParam +-down- in.ashwanik.pdp.common.http.RestClientParam.RestClientParamBuilder
  in.ashwanik.pdp.common.http.RestResponse o-- E : error
  in.ashwanik.pdp.common.http.RestResponse o-- S : success
  in.ashwanik.pdp.common.http.RestResponse +-down- in.ashwanik.pdp.common.http.RestResponse.RestResponseBuilder
  in.ashwanik.pdp.common.http.RestResponse.RestResponseBuilder o-- E : error
  in.ashwanik.pdp.common.http.RestResponse.RestResponseBuilder o-- S : success


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
